# iwp

./: .gitignore  experiment.ipynb  pyproject.toml
scripts/: FiniteElementExample.edp  GenerateMatrix.edp  PlotPredictedvector.edp  generate_data.sh  use_freemfem_on_edp.sh
src/iwp/: config.yaml  experiment.ipynb  main.py
src/iwp/algorithms/: algorithms.py  metrics.py  plot.py
src/iwp/data/: export.py  export_prediction.py  load.py  load_experiment_data.py  load_from_dat.py
src/iwp/utils/: config.py  logger.py  utils.py
