[project]
authors = [{name = "matthieuml", email = "matthieu.merigot-lombard@eleves.enpc.fr"}]
name = "iwp"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "numpy>=2.3.1,<3", "scipy>=1.16.0,<2", "torch>=2.7.1,<3", "pyyaml>=6.0.2,<7", "matplotlib>=3.10.3,<4", "seaborn>=0.13.2,<0.14"]

[dependency-groups]
dev = ["black>=25.1.0,<26", "isort>=6.0.1,<7"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
iwp = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.13.5,<3.14"

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}
